Fixed footer background colour issue

--- a/index.css
+++ b/index.css
@@ -162,6 +162,9 @@ header{
     color: #696e79;
     margin-right: 3px;
 }
+.footer_container2{
+    background-color: #FAFBFC;
+}
 .copyright{
     color: #94969f;
     margin: 0 160px;
