--- a/index.css
+++ b/index.css
@@ -74,13 +74,18 @@ header{
 }
 .search_input{
     border: none;
-    color: #696e79;
     height: 40px;
     width: 0%;
     flex-grow: 1;
     background-color: #f5f5f6;
     padding: 8px 10px 10px;
     border-radius: 0 4px 4px 0;
+}
+.search_input::placeholder{
+    color: #696e79;
+}
+.search_input:focus{
+    outline: none;
 }
 .search_icon{
     height: 40px;
