--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ header{
     background-color: white;    
     height: 80px;
     display: flex;
+    overflow-x: hidden;
     align-items: center;
     justify-content: space-between;
     border-bottom: 0.5px solid #ebebeb;
@@ -137,7 +138,6 @@ main{
 }
 .banner_image{
     width: 100%;
-    min-width: 1018px;
     margin: 23px 0;
 }
 .category_heading{
@@ -218,6 +218,23 @@ main{
     color: #94969f;
 }
 
+/* ----------Tablet Version ----------*/
+@media screen and (max-width:1027px){
+    .hamburger_menu{
+        margin-left: 12px;
+        display: inline-block;
+    }
+    .nav_bar{
+        display: none;
+    }
+    .logo_container{
+        margin-left: 12px;
+    }
+    .search_bar{
+        flex-grow: 1;
+    }
+}
+
 /* ----------Mobile Version ----------*/
 
 @media screen and (max-width: 480px) {
@@ -225,7 +242,7 @@ main{
     header{
         width: 100vw;
         height: 56px;
-        background-color: white;
+        overflow-x: visible;
         position: fixed;
         display: block;
     }
